영화 추천 페이지 만들기

--- a/movie/StyleSheet.css
+++ b/movie/StyleSheet.css
@@ -49,3 +49,27 @@ body{
 #main_navigation > ul > li:nth-child(3) > a:hover { background-position: 0px -250px;}
 #main_navigation > ul > li:nth-child(4) > a:hover { background-position: 0px -350px;}
 
+#title {
+    position: absolute;
+    left: 0; top: -48px;
+
+    width: 240px; height: 48px;
+    overflow: hidden;
+}
+#title > h1 {
+    position: absolute;
+    left: 0; top: 48px;
+
+    width: 240px; height: 48px;
+
+    background: url('Images/df.png');
+    text-indent: -9999px;
+    
+    transition-duration: 1s;
+}
+
+#title > h1.active { top: 0;}
+#title > h1:nth-child(1) { background-position: 0px 0px;}
+#title > h1:nth-child(1) { background-position: 0px -48px;}
+#title > h1:nth-child(1) { background-position: 0px -96px;}
+
