--- a/분석/analysis.css
+++ b/분석/analysis.css
@@ -3,118 +3,748 @@
     background: url("이미지/back2.png") no-repeat center/cover;
 } */
 /* REMOVE THIS, USE YOUR OWN  */
+*{
+  font-family: "Noto Sans KR";
+}
+p{
+  color: #000000;
+  font-size: 1.5vw;
+
+}
 html,body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, Sans-serif;
-    background-color: #9082C0; 
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, Sans-serif;
+}
+b {
+  font-size: 2.8vw;
+}
+
+
+/*이미지*/
+.img { 
+  width: 40%;
+  height: 50%;
+}
+.img_p {
+  width: 20%;
+  height: 50%;
+}
+.styleimg {
+  max-width: 100%;
+  max-height: 100%;
+  width: 20%;
+  height: 45%; 
+  /* float: left; */
+}
+
+/* 라인 선  */
+.start_line{
+  content: "";
+  flex-grow: 1;
+  margin:0px 16px;
+  background: rgba(102, 99, 99, 0.767);
+  height: 2px;
+  font-size: 0px;
+  line-height: 0px;
+}
+.end_line{
+  content: "";
+  flex-grow: 1;
+  margin:0px 16px;
+  background: rgba(102, 99, 99, 0.767);
+  height: 2px;
+  font-size: 0px;
+  line-height: 0px;
+}
+
+#outline,#outline2,#outline3{
+  padding-top: 10%;
+  background-color: #ffffff;
+}
+ 
+
+/* body carousel페이지 */
+.sumlight_page {
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  position: relative;
+  color: #713D84;
+  box-sizing: border-box;
+  padding: 60px 0px;
+  height: auto;
+  padding-top: 10%;
+  background-color: white;
+}
+.sumlight_page2 {
+  background-color: white;
+  width: 100%;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  color: #713D84;
+  box-sizing: border-box;
+  padding: 60px 0px;
+  height: auto;
+  padding-top: 10%;
+  /* background-color: #cce8f4; */
+}
+
+
+/* STYLES SPECIFIC TO FOOTER  */
+.footer {
+  font-size: small;
+  width: 100%;
+  position: relative;
+  height: auto;
+  background-color: #84BDF4;
+
+}
+.footer .col {
+  width: 400px;
+  height: auto;
+  float: left;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  padding: 0px 20px 20px 20px;
+}
+.footer .col h1 {
+  margin: 0;
+  padding: 0;
+  font-family: inherit;
+  font-size: 12px;
+  line-height: 17px;
+  padding: 20px 0px 5px 0px;
+  color: rgba(255, 255, 255, 0.2);
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 0.25em;
+}
+.footer .col ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.footer .col ul li {
+  color: #ffffff;
+  font-size: 14px;
+  font-family: inherit;
+  font-weight: bold;
+  padding: 5px 0px 5px 0px;
+  cursor: pointer;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  font-size: 5px;
+}
+.social ul li {
+  display: inline-block;
+  padding-right: 5px !important;
+}
+
+.footer .col ul li:hover {
+  color: #000000;
+  transition: 0.1s;
+  -webkit-transition: 0.1s;
+  -moz-transition: 0.1s;
+}
+.clearfix {
+  clear: both;
+}
+@media only screen and (min-width: 1280px) {
+  .contain {
+    width: 1200px;
+    margin: 0 auto;
   }
-  .dummy_page {
-    height: 200px;
-    width: 100%;
-    background-color: #f0f0f0;
-    text-align: center;
-    box-sizing: border-box;
-    padding: 60px 0px;
-    height: auto;
+}
+@media only screen and (max-width: 1139px) {
+  .contain .social {
+    width: 1000px;
+    display: block;
   }
-  /* STYLES SPECIFIC TO FOOTER  */
-  .footer {
-    width: 100%;
-    position: relative;
-    height: auto;
-    background-color: #9082C0;
+  .social h1 {
+    margin: 0px;
   }
+}
+@media only screen and (max-width: 950px) {
   .footer .col {
-    width: 400px;
-    height: auto;
-    float: left;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    padding: 0px 20px 20px 20px;
+    width: 33%;
   }
   .footer .col h1 {
-    margin: 0;
-    padding: 0;
-    font-family: inherit;
-    font-size: 12px;
-    line-height: 17px;
-    padding: 20px 0px 5px 0px;
-    color: rgba(255,255,255,0.2);
-    font-weight: normal;
-    text-transform: uppercase;
-    letter-spacing: 0.250em;
-  }
-  .footer .col ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    font-size: 14px;
   }
   .footer .col ul li {
-    color: #FFFFFF;
+    font-size: 13px;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .footer .col {
+    width: 50%;
+  }
+  .footer .col h1 {
     font-size: 14px;
-    font-family: inherit;
-    font-weight: bold;
-    padding: 5px 0px 5px 0px;
-    cursor: pointer;
-    transition: .2s;
-    -webkit-transition: .2s;
-    -moz-transition: .2s;
   }
-  .social ul li {
-    display: inline-block;
-    padding-right: 5px !important;
+  .footer .col ul li {
+    font-size: 13px;
   }
-  
-  .footer .col ul li:hover {
-    color: #000000;
-    transition: .1s;
-    -webkit-transition: .1s;
-    -moz-transition: .1s;
+}
+@media only screen and (max-width: 340px) {
+  .footer .col {
+    width: 100%;
   }
-  .clearfix {
-    clear: both;
+}
+
+
+/* css */
+
+/* 공백 없앰 */
+.navbar{
+  background-color: #84BDF4;
+  width: 100%;
+  height: 100px;
+}
+/* 플렉스 박스 이용해서 크기 지정, 패딩으로 간격 지정 */
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 50px;
+    margin-top: -10px;
+}
+/* navBar에 줄 넣기 */
+.start-line{
+  display: flex;
+  flex-basis: 100%;
+  align-items: center;
+  color: white;
+  font-size: 20px;
+  margin: 0px 0px;
+}
+.start-line::before{
+  content: "";
+  flex-grow: 1;
+  margin: 0px 16px;
+  background: white;
+  height: 1px;
+  font-size: 0px;
+  line-height: 0px;
+}
+.start-line::after{
+  content: "";
+  flex-grow: 1;
+  margin: 0px 16px;
+  background: white;
+  height: 1px;
+  font-size: 0px;
+  line-height: 0px;
+}
+.end-line{
+  content: "";
+  flex-grow: 1;
+  margin:0px 16px;
+  background: white;
+  height: 1.5px;
+  font-size: 0px;
+  line-height: 0px;
+}
+.logo{
+  padding: 35px;
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  display: none;
+}
+/* 글씨 색 바꿈, 줄 없앰 */
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 15px;
+}
+.menu{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
+/* 리스트 앞에 점X, 간격 주기 위해 패딩 사용 */
+.navbar_menu {
+  width: 100%;
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding-left: 0;
+  justify-content: space-between;
+}
+.navbar_menu li {
+  padding: 25.5px;
+  width: 100%;
+  height: 20px;
+  text-align: center;
+}
+/* 커서를 올리면 색이 바뀜, 애니메이션 효과 */
+.navbar_menu li:hover{
+  background-color: rgb(73, 70, 250); 
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear
+}
+/* 햄버거 메뉴 코드 */
+.hamburger_btn {
+    color: rgb(73, 70, 250); 
+    position: absolute;
+    left: 15px;
+    top: 30px;
+    font-size: 30px;
+    display: none;
   }
-  @media only screen and (min-width: 1280px) {
-    .contain {
-      width: 1200px;
-      margin: 0 auto;
+/* 스크린 크기가 767px가 되면 이렇게 해라~ 하는 코드 */
+@media screen and (max-width: 620px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 0;
     }
-  }
-  @media only screen and (max-width: 1139px) {
-    .contain .social {
-      width: 1000px;
+    .navbar_menu {
+        order: 1;
+        flex-direction: column;
+        align-items: center;
+        width: 120%;
+        display: none;
+        margin-top: 10px;
+    }
+    .start-line{
+      display: none;
+    }
+    .end-line{
+        display: none;
+    }
+    .navbar_menu li {
+      background-color: #a2cef7;
+        width: 100%;
+        text-align: center;
+        z-index: 1;
+    }
+    .logo{
       display: block;
     }
-    .social h1 {
-      margin: 0px;
+    /* 햄버거 버튼이 스크린이 작아지면 보이도록 하는 코드 */
+    .hamburger_btn {
+        display: block;
     }
-  }
-  @media only screen and (max-width: 950px) {
-    .footer .col {
-      width: 33%;
+    .navbar_menu.active {
+        display: flex;
     }
-    .footer .col h1 {
-      font-size: 14px;
-    }
-    .footer .col ul li {
-      font-size: 13px;
-    }
-  }
-  @media only screen and (max-width: 500px) {
-      .footer .col {
-        width: 50%;
-      }
-      .footer .col h1 {
-        font-size: 14px;
-      }
-      .footer .col ul li {
-        font-size: 13px;
-      }
-  }
-  @media only screen and (max-width: 340px) {
-    .footer .col {
-      width: 100%;
-    }
-  }
+}
+/* mid1 */
+.mid1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.mid1 .circle{
+  margin-top: 260px;
+  background-color: rgba(212, 165, 82, 0.637);
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  transform: translate( 0%, -65% );
+}
+.circle_text{
+  font-size: 24px;
+  text-align: center;
+  position: absolute;
+	top: 50%;
+	left: 50%;
+  transform: translate( -50%, -50% );
+}
+/* mid2 */
+.mid2{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.mid2 .square-box{
+  margin: 235px;
+  position: relative;
+  width: 100%;
+  height: 856px;
+  background-color: black;
+}
+.mid2 .square-box::after{
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+.mid2 .container .title{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 24px;
+  text-align: center;
+}
+.mid2 .content{
+  display: flex;
+  gap: 1em;
+  justify-content: center;
+}
+.mid2 .container .content .box{
+  margin: 235px;
+  min-width: 30%;
+  min-height: 40%;
+  flex-basis: 150px;
+  flex-grow: 1;
+  position: relative;
+  overflow: hidden;
+  background-color: purple;
+}
+.mid2 .container .content .box .advantage{
+  min-height: 456px;
+  flex-basis: 150px;
+  flex-grow: 1;
+  position: relative;
+  color: white;
+  font-size: 16px;
+  text-align: center;
+}
+
+
+/* carousel */
+.carousel {
+  position: relative;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+  margin-top: 26px;
+}
+
+.carousel-inner {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.carousel-open:checked + .carousel-item {
+  position: static;
+  opacity: 100;
+}
+
+.carousel-item {
+  position: absolute;
+  opacity: 0;
+  -webkit-transition: opacity 0.6s ease-out;
+  transition: opacity 0.6s ease-out;
+}
+
+.carousel-item img {
+  height: auto;
+  max-width: 100%;
+}
+
+.carousel-control {
+  background: rgba(0, 0, 0, 0.28);
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+  font-size: 40px;
+  height: 40px;
+  line-height: 35px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  cursor: pointer;
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  text-align: center;
+  width: 40px;
+  z-index: 10;
+}
+
+.carousel-control.prev {
+  left: 2%;
+}
+
+.carousel-control.next {
+  right: 2%;
+}
+
+.carousel-control:hover {
+  background: rgba(0, 0, 0, 0.8);
+  color: #aaaaaa;
+}
+
+#carousel-1:checked ~ .control-1,
+#carousel-2:checked ~ .control-2,
+#carousel-3:checked ~ .control-3 {
+  display: block;
+}
+
+.carousel-indicators {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  bottom: 2%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 10;
+}
+
+.carousel-indicators li {
+  display: inline-block;
+  margin: 0 5px;
+}
+
+.carousel-bullet {
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  font-size: 35px;
+}
+
+.carousel-bullet:hover {
+  color: #aaaaaa;
+}
+
+#carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
+#carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
+#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
+  color: #428bca;
+}
+
+#title {
+  width: 100%;
+  position: absolute;
+  padding: 0px;
+  margin: 0px auto;
+  text-align: center;
+  font-size: 27px;
+  color: rgba(255, 255, 255, 1);
+  font-family: 'Open Sans', sans-serif;
+  z-index: 9999;
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
+}
+
+.carousel {
+  position: relative;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+  margin-top: 26px;
+}
+
+.carousel-inner {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.carousel-open:checked + .carousel-item {
+  position: static;
+  opacity: 100;
+}
+
+.carousel-item {
+  position: absolute;
+  opacity: 0;
+  -webkit-transition: opacity 0.6s ease-out;
+  transition: opacity 0.6s ease-out;
+}
+
+.carousel-item img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+
+.carousel-control {
+  background: rgba(0, 0, 0, 0.28);
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+  font-size: 40px;
+  height: 40px;
+  line-height: 35px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  cursor: pointer;
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  text-align: center;
+  width: 40px;
+  z-index: 10;
+}
+
+.carousel-control.prev {
+  left: 2%;
+}
+
+.carousel-control.next {
+  right: 2%;
+}
+
+.carousel-control:hover {
+  background: rgba(0, 0, 0, 0.8);
+  color: #aaaaaa;
+}
+
+#carousel-1:checked ~ .control-1,
+#carousel-2:checked ~ .control-2,
+#carousel-3:checked ~ .control-3 {
+  display: block;
+}
+
+.carousel-indicators {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  bottom: 2%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 10;
+}
+
+.carousel-indicators li {
+  display: inline-block;
+  margin: 0 5px;
+}
+
+.carousel-bullet {
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  font-size: 35px;
+}
+
+.carousel-bullet:hover {
+  color: #aaaaaa;
+}
+
+#carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
+#carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
+#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
+  color: #428bca;
+}
+
+#title {
+  width: 100%;
+  position: absolute;
+  padding: 0px;
+  margin: 0px auto;
+  text-align: center;
+  font-size: 27px;
+  color: rgba(255, 255, 255, 1);
+  font-family: 'Open Sans', sans-serif;
+  z-index: 9999;
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
+}
+
+/* css */
+.carousel1 {
+  position: relative;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+  margin-top: 26px;
+}
+
+.carousel1-inner {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.carousel1-open:checked + .carousel1-item {
+  position: static;
+  opacity: 100;
+}
+
+.carousel1-item {
+  position: absolute;
+  opacity: 0;
+  -webkit-transition: opacity 0.6s ease-out;
+  transition: opacity 0.6s ease-out;
+}
+
+.carousel1-item img {
+  height: auto;
+  max-width: 100%;
+}
+
+.carousel1-control {
+  background: rgba(0, 0, 0, 0.28);
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+  font-size: 40px;
+  height: 40px;
+  line-height: 35px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  cursor: pointer;
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  text-align: center;
+  width: 40px;
+  z-index: 10;
+}
+
+.carousel1-control.prev {
+  left: 2%;
+}
+
+.carousel1-control.next {
+  right: 2%;
+}
+
+.carousel1-control:hover {
+  background: rgba(0, 0, 0, 0.8);
+  color: #aaaaaa;
+}
+
+#carousel1-1:checked ~ .control1-1,
+#carousel1-2:checked ~ .control1-2,
+#carousel1-3:checked ~ .control1-3 {
+  display: block;
+}
+
+.carousel1-indicators {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  bottom: 2%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 10;
+}
+
+.carousel1-indicators li {
+  display: inline-block;
+  margin: 0 5px;
+}
+
+.carousel1-bullet {
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  font-size: 35px;
+}
+
+.carousel1-bullet:hover {
+  color: #aaaaaa;
+}
+
+#carousel1-1:checked ~ .control1-1 ~ .carousel1-indicators li:nth-child(1) .carousel1-bullet,
+#carousel1-2:checked ~ .control1-2 ~ .carousel1-indicators li:nth-child(2) .carousel1-bullet,
+#carousel1-3:checked ~ .control1-3 ~ .carousel1-indicators li:nth-child(3) .carousel1-bullet {
+  color: #428bca;
+}
